fix(hover) fix flicker on narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,12 @@ div.omnisearch-pagination-wrapper > .pg-right {
 }
 
 /* hoverbox */
+.hoverlink {
+	position: fixed;
+	background: transparent;
+	z-index: 202;
+}
+
 .hoverbox {
 	position: fixed;
 	max-width: 600px;
